Fixed the Deer Background Image and The Bottom Border
	The background image that originally featured the deer was an image and not part of the background. This caused several problems, and I decided to instead make
	the image the background of the wrapper div.

	The border at the bottom of the page would originally expose a couple of pixels worth of white space below it. This caused a major eyesore. Thanks to StackOverflow, the
	issue was resolved.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -11,24 +11,23 @@
 
   display: inline-block;
 
-  height: 2.5em;
-  position: static;
-  bottom: 0;
-  width:100%;
-
-  background-color: #484848;
-  margin-top:4%;
+   background-color: #484848;
+   height: 2.5em;
+   position: static;
+   left: 0;
+   bottom: 0;
+   width: 100%;
 
 }
 
 #choice{
-
-  width:69%;
-  margin:auto;
+  
   background-color:transparent;
   top:28%; left:0; bottom:0; right:0;
-  position:absolute;
   text-align:center;
+
+  display: table-cell;
+  vertical-align: middle;
 
 }
 
@@ -37,7 +36,7 @@
   color: 	#FFFFFF;
   padding-left: 3%;
   padding-right: 3%;
-
+  text-align:center;
   font-size: 1.0em;
 
 }
@@ -55,5 +54,8 @@
 
   height: 57%;
   width: 100%;
+  background-image: url("base.png");
+
+  display: table;
 
 }
