--- a/static/css/main.css
+++ b/static/css/main.css
@@ -21,3 +21,10 @@
   padding-bottom: 2%;
 
 }
+
+.center{
+
+  width: 100%;
+  margin: 0 auto;
+
+}
